# raynaSDK

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_FLOW.md  README.md  START.sh  TEST_QUERIES.md  ingest.py  nixpacks.toml  pyproject.toml  rag_engine.py  railway.json  rayna_utils.py  requirements.txt  server.py  sim_dubai_tours.py  test_live_urls.py  vercel.json
.claude/: settings.local.json
api/: index.py
knowledge_base/: custom.json  faqs.json  policies.json
web/: package-lock.json  package.json  tsconfig.json
web/src/: TourCompareComponent.tsx  TourDetailComponent.tsx  TourListComponent.tsx  hooks.ts  types.ts
